fix: more contrast box-shadow for ModalCard

--- a/src/components/ModalCard/ModalCard.module.scss
+++ b/src/components/ModalCard/ModalCard.module.scss
@@ -25,9 +25,9 @@
   position: relative;
   overflow: auto;
   overflow-x: hidden;
-  box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
-  -webkit-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
+  box-shadow: 0 0 20px rgba(255, 255, 255, 0.75);
+  -webkit-box-shadow: 0 0 20px rgba(255, 255, 255, 0.75);
+  -moz-box-shadow: 0 0 20px rgba(255, 255, 255, 0.75);
 }
 
 .loading {
